--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Landing page for natours",
   "default": "index.html",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "write:sass": "node-sass sass/main.scss css/style.css -w",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver write:sass",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css"
   },
   "author": "timashan",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^7.0.1"
+    "node-sass": "^7.0.1",
+    "npm-run-all": "^4.1.5"
   }
 }
