--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "write:sass": "node-sass sass/main.scss css/style.css -w",
     "devserver": "live-server",
     "start": "npm-run-all --parallel devserver write:sass",
-    "compile:sass": "node-sass sass/main.scss css/style.comp.css"
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/style.comp.css css/styles.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "author": "timashan",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "concat": "^1.0.3",
     "node-sass": "^7.0.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^9.1.0"
   }
 }
